Fixed price scaling bug on menu - clipping of end numbers on smaller devices.

--- a/sass/media-queries.scss
+++ b/sass/media-queries.scss
@@ -226,7 +226,7 @@
         font-size: 2.5vw !important;
     }
     .menu-items p.price { // dish price
-        font-size: 3.5vw !important;
+        font-size: 3.2vw !important; 
     }
 }
 
